<resources>
    <string name="app_name">travel</string>
    <string name="user_protocol">登录或注册即同意到处旅行用户协议</string>
    <string name="unknow_error">未知错误</string>
    <string name="conn_error">连接失败</string>
    <string name="conn_timeout">连接超时</string>
    <string name="net_error">网络错误</string>
    <string name="parse_error">解析异常</string>
    <string name="net_unused">当前网络不可用</string>
    <string name="oauth_cancel">授权取消了</string>
    <string name="oauth_error">授权失败</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="please_verify_code">请在上方文本框内输入此验证码：</string>
    <string name="place_later">请稍后…</string>
    <string name="lin_miss">林小姐</string>
    <string name="signature">四体不勤五谷不分人懒嘴馋花痴健忘</string>
    <string name="compile">编辑</string>
    <string name="me_money">我的钱包</string>
    <string name="nine_nine">0.00</string>
    <string name="unit">元</string>
    <string name="bonus">赢取奖金</string>
    <string name="me_kaquan">我的卡券</string>
    <string name="yet_buy">已购行程</string>
    <string name="me_guanzhu">我的关注</string>
    <string name="me_collect">我的收藏</string>
    <string name="relation_service">联系客服</string>
    <string name="version">版本检测</string>
    <string name="opinion">意见反馈</string>
    <string name="me_info">个人信息</string>
    <string name="gain_path">获取路径</string>
    <string name="photo">头像</string>
    <string name="user_name">用户名称</string>
    <string name="ban_xiaomi">伴小米</string>
    <string name="sex">性别</string>
    <string name="privacy">保密</string>
    <string name="qianming">签名</string>
    <string name="update_password">修改密码</string>
    <string name="bind_phone">绑定手机</string>
    <string name="exit_login">退出登录</string>
    <string name="send_again">重新发送</string>
    <string name="update_name">修改昵称</string>
    <string name="wan_cheng">完成</string>
    <string name="update_qianming">个性签名</string>
    <string name="man">男</string>
    <string name="wuman">女士</string>
    <string name="dimess">取消</string>
    <string name="update_ok">修改成功</string>
    <string name="expe">立即体验</string>
    <string name="take_albom">打开相册</string>
    <string name="take_camera">相机拍照</string>
    <string name="update_img">修改头像</string>
    <string name="lazy">这个家伙很懒！</string>
    <string name="banmi_name">伴米名字</string>
    <string name="banmi_work">伴米的职业</string>
    <string name="beijing">北京市</string>
    <string name="look_all">查看全部评价</string>
    <string name="share">分享</string>
    <string name="collect_not">收藏</string>
    <string name="look_path">预览线路</string>
    <string name="yew_collect">已收藏</string>
    <string name="me_follow">我的关注</string>
    <string name="all_reviews">全部评价</string>
    <string name="me_theme">我的主题</string>
    <string name="path">线路</string>
    <string name="particulars">详情</string>
    <string name="dongtai">动态</string>
    <string name="publish_dynamic">发表了一条动态</string>
    <string name="time">4小时前</string>
    <string name="banmi_part">伴米详情</string>
    <string name="this_title">这里是标题</string>
</resources>
