<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_33000000">
    <LinearLayout
        android:background="@color/transparent"
        android:layout_marginBottom="@dimen/dp_100"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_marginTop="@dimen/dp_15"
            android:id="@+id/btn_camera"
            android:textSize="@dimen/sp_15"
            android:text="@string/take_camera"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_20"
            android:background="@drawable/gra_dedede"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40" />
        <Button
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_15"
            android:id="@+id/btn_albom"
            android:textSize="@dimen/sp_15"
            android:text="@string/take_albom"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_20"
            android:background="@drawable/gra_dedede"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40" />
    </LinearLayout>
    <Button
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_15"
        android:id="@+id/btn_dimiss"
        android:textSize="@dimen/sp_15"
        android:text="@string/dimess"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:background="@drawable/gra_dedede"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40" />
</RelativeLayout>