<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/FullScreen"
    android:id="@+id/header_container"
    android:background="@drawable/na_bg_fff"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="@color/white"
        android:id="@+id/comp_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.example.apcnl.travel.widget.CircleImageView
            android:id="@+id/user_img"
            android:src="@drawable/zhanweitu_touxiang"
            android:layout_width="@dimen/dp_70"
            android:layout_height="@dimen/dp_70"
            android:layout_marginTop="@dimen/dp_37"
            android:layout_marginLeft="@dimen/dp_12"/>
        <TextView
            android:textSize="@dimen/sp_22"
            android:textColor="@color/c_999999"
            android:text="@string/lin_miss"
            android:layout_marginLeft="@dimen/dp_11"
            android:id="@+id/user_name"
            android:layout_toRightOf="@id/user_img"
            android:layout_marginTop="@dimen/dp_42"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="@dimen/dp_72"
            android:layout_toRightOf="@id/user_img"
            android:layout_marginLeft="@dimen/dp_13"
            android:textColor="@color/c_999999"
            android:textSize="@dimen/sp_12"
            android:text="@string/signature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/img_pen"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/dp_94"
            android:layout_marginRight="@dimen/dp_54"
            android:src="@drawable/icon_me_bianji"
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_15" />
        <TextView
            android:textColor="@color/c_FA6A13"
            android:textSize="@dimen/sp_14"
            android:text="@string/compile"
            android:layout_marginTop="@dimen/dp_91"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        app:cardElevation="@dimen/dp_10"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:cardCornerRadius="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_37"
        android:layout_below="@id/comp_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_122">

        <RelativeLayout
            android:background="@drawable/header_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_8"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/c_FFFFFF"
                android:text="@string/me_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/me_money"/>
            <TextView
                android:layout_centerInParent="true"
                android:textColor="@color/c_FFFFFF"
                android:id="@+id/tv_money_count"
                android:textSize="@dimen/sp_58"
                android:text="@string/nine_nine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginTop="@dimen/dp_64"
                android:text="@string/unit"
                android:textColor="@color/c_FFFFFF"
                android:textSize="@dimen/sp_14"
                android:layout_toRightOf="@id/tv_money_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_3"/>
            <TextView
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="@dimen/dp_11"
                android:layout_marginRight="@dimen/dp_27"
                android:textColor="@color/c_FFFFFF"
                android:textSize="@dimen/sp_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bonus"/>
            <TextView
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="@dimen/dp_11"
                android:layout_marginRight="@dimen/dp_10"
                android:textColor="@color/c_FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=">>"
                android:textSize="@dimen/sp_14"/>
        </RelativeLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/cv2"
        android:layout_below="@id/cv"
        app:cardElevation="@dimen/dp_10"
        app:cardCornerRadius="@dimen/dp_10"
        android:background="@color/white"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_below="@id/cv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_212">
            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0">
                <ImageView
                    android:id="@+id/img_kaquan"
                    android:layout_marginLeft="@dimen/dp_17"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_me_kaquan"/>
                <TextView
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/img_kaquan"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:textColor="@color/c_333333"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/me_kaquan"/>
                <ImageView
                    android:layout_marginRight="@dimen/dp_22"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_width="@dimen/dp_6"
                    android:layout_height="@dimen/dp_11"
                    android:src="@drawable/right_arrow"/>
            </RelativeLayout>
            <View
                android:layout_marginLeft="@dimen/dp_14"
                android:layout_marginRight="@dimen/dp_14"
                android:background="@drawable/gra_dedede"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"/>
            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0">
                <ImageView
                    android:id="@+id/img_yigou"
                    android:layout_marginLeft="@dimen/dp_17"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_me_yigou"/>
                <TextView
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/img_yigou"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:textColor="@color/c_333333"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yet_buy"/>
                <ImageView
                    android:layout_marginRight="@dimen/dp_22"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_width="@dimen/dp_6"
                    android:layout_height="@dimen/dp_11"
                    android:src="@drawable/right_arrow"/>
            </RelativeLayout>
            <View
                android:layout_marginLeft="@dimen/dp_14"
                android:layout_marginRight="@dimen/dp_14"
                android:background="@drawable/gra_dedede"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"/>
            <RelativeLayout
                android:id="@+id/rl_collect"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0">
                <ImageView
                    android:id="@+id/img_collect"
                    android:layout_marginLeft="@dimen/dp_17"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_me_shoucang"/>
                <TextView
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/img_collect"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:textColor="@color/c_333333"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/me_collect"/>
                <ImageView
                    android:layout_marginRight="@dimen/dp_22"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_width="@dimen/dp_6"
                    android:layout_height="@dimen/dp_11"
                    android:src="@drawable/right_arrow"/>
            </RelativeLayout>
            <View
                android:layout_marginLeft="@dimen/dp_14"
                android:layout_marginRight="@dimen/dp_14"
                android:background="@drawable/gra_dedede"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"/>
            <RelativeLayout
                android:id="@+id/rl_follow"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0">
                <ImageView
                    android:id="@+id/img_guanzhu"
                    android:layout_marginLeft="@dimen/dp_17"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_me_guanzhu"/>
                <TextView
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/img_guanzhu"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:textColor="@color/c_333333"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/me_guanzhu"/>
                <ImageView
                    android:layout_marginRight="@dimen/dp_22"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_width="@dimen/dp_6"
                    android:layout_height="@dimen/dp_11"
                    android:src="@drawable/right_arrow"/>
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_below="@id/cv2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/dp_30"
                android:layout_marginLeft="@dimen/dp_16"
                android:src="@drawable/icon_me_kefu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/dp_30"
                android:textColor="@color/c_333333"
                android:textSize="@dimen/sp_12"
                android:layout_marginLeft="@dimen/dp_48"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relation_service"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/dp_30"
                android:layout_marginLeft="@dimen/dp_16"
                android:src="@drawable/icon_me_fankui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/dp_30"
                android:textColor="@color/c_333333"
                android:textSize="@dimen/sp_12"
                android:layout_marginLeft="@dimen/dp_48"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opinion"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/dp_30"
                android:layout_marginLeft="@dimen/dp_16"
                android:src="@drawable/icon_me_banben"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_detection"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/dp_30"
                android:textColor="@color/c_333333"
                android:textSize="@dimen/sp_12"
                android:layout_marginLeft="@dimen/dp_48"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version"/>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>