<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/c_FFFFFF"
    android:fitsSystemWindows="true"
    tools:context="com.example.apcnl.travel.activity.MeInfoActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/c_FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44">
        <ImageView
            android:layout_gravity="center_vertical"
            android:id="@+id/img_back"
            android:src="@mipmap/back_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="@dimen/sp_16"
            android:textColor="@color/c_333333"
            android:layout_gravity="center"
            android:text="@string/me_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.Toolbar>
    <View
        android:background="@drawable/gra_fff_de"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_4"/>
    <TextView
        android:layout_marginLeft="@dimen/dp_12"
        android:textSize="@dimen/sp_12"
        android:textColor="@color/c_666666"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/gain_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.CardView
        android:background="@color/c_FFFFFF"
        app:cardCornerRadius="@dimen/dp_10"
        app:cardElevation="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_13"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_211">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/img_container"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0">
                <TextView
                    android:textColor="@color/c_333333"
                    android:textSize="@dimen/sp_14"
                    android:layout_marginLeft="@dimen/dp_14"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/photo"/>
                <com.example.apcnl.travel.widget.CircleImageView
                    android:id="@+id/img"
                    android:layout_marginRight="@dimen/dp_14"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_width="@dimen/dp_40"
                    android:layout_height="@dimen/dp_40" />
            </RelativeLayout>
            <View
                android:layout_marginLeft="@dimen/dp_14"
                android:layout_marginRight="@dimen/dp_14"
                android:background="@drawable/gra_dedede"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"/>
            <RelativeLayout
                android:id="@+id/name_container"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0">
                <TextView
                    android:textColor="@color/c_333333"
                    android:textSize="@dimen/sp_14"
                    android:layout_marginLeft="@dimen/dp_14"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"/>
                <TextView
                    android:id="@+id/tv_name"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/c_999999"
                    android:textSize="@dimen/sp_14"
                    android:layout_marginRight="@dimen/dp_14"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
            <View
                android:layout_marginLeft="@dimen/dp_14"
                android:layout_marginRight="@dimen/dp_14"
                android:background="@drawable/gra_dedede"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"/>
            <RelativeLayout
                android:id="@+id/sex_container"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0">
                <TextView
                    android:textColor="@color/c_333333"
                    android:textSize="@dimen/sp_14"
                    android:layout_marginLeft="@dimen/dp_14"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sex"/>
                <TextView
                    android:id="@+id/tv_sex"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/c_999999"
                    android:textSize="@dimen/sp_14"
                    android:layout_marginRight="@dimen/dp_14"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
            <View
                android:layout_marginLeft="@dimen/dp_14"
                android:layout_marginRight="@dimen/dp_14"
                android:background="@drawable/gra_dedede"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"/>
            <RelativeLayout
                android:id="@+id/qianming_container"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0">
                <TextView
                    android:textColor="@color/c_333333"
                    android:textSize="@dimen/sp_14"
                    android:layout_marginLeft="@dimen/dp_14"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qianming"/>
                <TextView
                    android:id="@+id/tv_qianming"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/c_999999"
                    android:textSize="@dimen/sp_14"
                    android:layout_marginRight="@dimen/dp_14"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView

        android:background="@color/c_FFFFFF"
        app:cardCornerRadius="@dimen/dp_10"
        app:cardElevation="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_23"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_111">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0">
                <TextView
                    android:textColor="@color/c_333333"
                    android:textSize="@dimen/sp_14"
                    android:layout_marginLeft="@dimen/dp_14"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update_password"/>
            </RelativeLayout>
            <View
                android:layout_marginLeft="@dimen/dp_14"
                android:layout_marginRight="@dimen/dp_14"
                android:background="@drawable/gra_dedede"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"/>
            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0">
                <TextView
                    android:textColor="@color/c_333333"
                    android:textSize="@dimen/sp_14"
                    android:layout_marginLeft="@dimen/dp_14"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bind_phone"/>
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:textSize="@dimen/sp_14"
        android:textColor="@color/c_FFFFFF"
        android:text="@string/exit_login"
        android:layout_marginTop="@dimen/dp_28"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:background="@drawable/header_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40" />

</LinearLayout>
